src/main/java/com/example/common/error/Exception401.java
package com.example.common.error;

public class Exception401 extends RuntimeException{
   public Exception401(String msg) {
        super(msg);
    }
}
